cheatsheet: fix appearance on mobile browsers

--- a/public/stylesheets/thingpedia-cheatsheet.css
+++ b/public/stylesheets/thingpedia-cheatsheet.css
@@ -31,5 +31,18 @@
 }
 
 #cheatsheet .grid-item {
+  width: 100%;
+}
+
+@media (min-width: 992px) {
+#cheatsheet .grid-item {
+  width: 32%;
+}
+}
+
+@media (min-width: 1200px) {
+#cheatsheet .grid-item {
   width: 24%;
 }
+}
+
